# gpui-lib-engram

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml  release.yml
crates/engram/: Cargo.toml
crates/engram-theme/: Cargo.toml
crates/engram-theme/src/: colors.rs  default.rs  hot_reload.rs  loader.rs  refineable.rs  refinement.rs  registry.rs  system_appearance.rs  theme.rs  tokens.rs
crates/engram-theme/tests/: loader.rs
crates/engram-ui/: Cargo.toml
crates/engram-ui/src/: assets.rs  components.rs  styles.rs  traits.rs  ui.rs
crates/engram-ui/src/components/: accordion.rs  avatar.rs  banner.rs  breadcrumb.rs  button.rs  callout.rs  checkbox.rs  decorated_icon.rs  description_list.rs  disclosure.rs  divider.rs  dropdown_menu.rs  gradient_fade.rs  group.rs  hover_card.rs  icon.rs  image.rs  indicator.rs  keybinding.rs  keybinding_hint.rs  label.rs  list.rs  menu.rs  modal.rs  navigable.rs  overlay.rs  pagination.rs  popover.rs  progress.rs  radio.rs  scroll_metrics.rs  scrollbar.rs  sheet.rs  skeleton.rs  slider.rs  spinner.rs  squircle.rs  stack.rs  stepper.rs  switch.rs  (+7 more)
crates/engram-ui/src/components/button/: button.rs  button_like.rs  button_link.rs  copy_button.rs  icon_button.rs  split_button.rs  toggle_button.rs
crates/engram-ui/src/components/label/: headline.rs  highlighted_label.rs  label.rs  label_like.rs
crates/engram-ui/src/styles/: elevation.rs
crates/engram-ui/src/traits/: clickable.rs  disableable.rs  handlers.rs  styled_ext.rs  toggleable.rs
crates/engram-ui/tests/: render_smoke.rs
crates/engram/examples/: showcase.rs
crates/engram/src/: engram.rs
crates/story/: Cargo.toml
crates/story/src/: assets.rs  layout.rs  stories.rs  story.rs
crates/story/src/stories/: accordion.rs  avatar.rs  breadcrumb.rs  button.rs  button_link.rs  callout.rs  chip.rs  copy_button.rs  decorated_icon.rs  description_list.rs  disclosure.rs  divider.rs  dropdown_menu.rs  gradient_fade.rs  headline.rs  highlighted_label.rs  hover_card.rs  icon.rs  icon_button.rs  image.rs  indicator.rs  keybinding.rs  keybinding_hint.rs  label.rs  list.rs  menu.rs  modal.rs  pagination.rs  popover.rs  progress.rs  radio.rs  sheet.rs  skeleton.rs  slider.rs  spinner.rs  split_button.rs  squircle.rs  stepper.rs  switch.rs  tab.rs  (+7 more)
