[workspace]
resolver = "3"
members = [
    "crates/engram",
    "crates/engram-theme",
    "crates/engram-ui",
]
exclude = ["reference"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
engram-theme = { path = "crates/engram-theme" }
engram-ui = { path = "crates/engram-ui" }
gpui = { git = "https://github.com/zed-industries/zed", branch = "main" }
gpui_platform = { git = "https://github.com/zed-industries/zed", branch = "main", features = ["wayland", "x11"] }
anyhow = "1"
rust-embed = { version = "8", features = ["include-exclude"] }
smallvec = "1"
strum = { version = "0.27", features = ["derive"] }
unicode-segmentation = "1"
