[workspace]
resolver = "3"
members = [
    "crates/engram",
    "crates/engram-theme",
    "crates/engram-ui",
    "crates/story",
]
exclude = ["reference"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Elwqnn/gpui-engram"
homepage = "https://github.com/Elwqnn/gpui-engram"
readme = "README.md"
keywords = ["gpui", "ui", "desktop", "zed", "components"]
categories = ["gui"]

[workspace.dependencies]
gpui-engram = { path = "crates/engram", version = "0.1.0" }
gpui-engram-theme = { path = "crates/engram-theme", version = "0.1.0" }
gpui-engram-ui = { path = "crates/engram-ui", version = "0.1.0" }
gpui = { git = "https://github.com/zed-industries/zed", rev = "302e591e3d946ef84df1e3a6f41af1a0216288bc", version = "0.2.2" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "302e591e3d946ef84df1e3a6f41af1a0216288bc", features = ["wayland", "x11"] }
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
notify = "8"
rust-embed = { version = "8", features = ["include-exclude"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
strum = { version = "0.27", features = ["derive"] }
unicode-segmentation = "1"
