[package]
name = "gpui-engram-theme"
description = "Theme tokens (Color, Spacing, Radius, TextSize) and ActiveTheme global for the engram GPUI component library."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
publish = true

[lib]
path = "src/theme.rs"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
gpui.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
