[package]
name = "engram-ui"
description = "GPUI component primitives for engram - buttons, lists, popovers, text fields, and the shared trait + handler layer."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
publish = true

[lib]
path = "src/ui.rs"

[dependencies]
anyhow.workspace = true
engram-theme.workspace = true
gpui.workspace = true
image.workspace = true
rust-embed.workspace = true
smallvec.workspace = true
strum.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
