[package]
name = "story"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "story"
path = "src/story.rs"

[dependencies]
anyhow.workspace = true
gpui-engram.workspace = true
gpui-engram-theme.workspace = true
gpui-engram-ui.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
rust-embed.workspace = true
strum.workspace = true
